[package]
name = "il-compiler"
version = "0.1.0"
edition = "2024"
authors = ["nknighta <n.knight.pc0627@gmail.com>"]
description = " tools of indexlanguage"
license = "MIT/Apache-2.0"
repository = "https://github.com/nknighta/indexlanguage"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.44"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'console',
]