[package]
name = "il-compiler"
version = "0.0.13"
edition = "2021"
authors = ["nknighta <n.knight.pc0627@gmail.com>"]
description = "tools of indexlanguage"
license = "MIT"
repository = "https://github.com/nknighta/indexlanguage"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.44"
clap = { version = "4.5.35", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.44"
features = [
  'console',
]
